--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 	<!-- Header -->
-	<nav class="navbar navbar-expand-sm navbar-dark navbar-top fixed-top bg-dark" style="box-shadow: 0px 10px 10px #9bc1ff;">
+	<nav class="navbar navbar-expand-sm navbar-dark navbar-top fixed-top bg-dark" style="box-shadow: 0px 5px 5px #9bc1ff;">
 		<div class="container">
 			<a href="#" class="navbar-brand"> LOGO HERE </a>
 			<button class="navbar-toggler bg-success" data-toggle="collapse" data-target="#navid">
@@ -54,15 +54,93 @@
 	
 	<!-- header end -->
 
-	<div class="container-fluid mt-5"><br>
-		<div class="mx-0 mt-4 text-white bg-dark rounded py-3 px-4" style="min-height: 800px;">
-			main content go here
-		</div>
+	<div class="container-fluid p-0 mt-5"><br>
 
+		<div class="mx-0 mt-4 text-white bg-dark py-3 px-4" style="min-height: 800px;">
+			
+			<!-- single slider -->
+			<div class="carousel slide border" id="single-slider" data-ride="carousel">
+				<div class="carousel-inner px-5 py-2">
+					<div class="carousel-item active">
+						<img class="img-fluid" src="https://via.placeholder.com/1350x300?text=1">
+					</div>
+					<div class="carousel-item ">
+						<img class="img-fluid" src="https://via.placeholder.com/1350x300?text=2">
+					</div>
+					<div class="carousel-item ">
+						<img class="img-fluid" src="https://via.placeholder.com/1350x300?text=3">
+					</div>
+					<div class="carousel-item ">
+						<img class="img-fluid" src="https://via.placeholder.com/1350x300?text=4">
+					</div>
+				</div>
+				<a href="#single-slider" data-slide="prev" class="carousel-control-prev">
+					<span class="carousel-control-prev-icon"></span>
+				</a>
+				<a href="#single-slider" data-slide="next" class="carousel-control-next">
+					<span class="carousel-control-next-icon"></span>
+				</a>
+			</div>
+			<!-- single slider end -->
+			<br><br><br><br>
+			<!-- multy slider -->
+			<div class="carousel slide border" id="multi-slider" data-ride="carousel">
+				<div class="carousel-inner ">
+					<div class="carousel-item active">
+						<div class="row px-4 py-2">
+							<div class="col-3 mx-auto">
+								<img class="img-fluid" src="https://via.placeholder.com/350x300?text=1">
+								<div id="content" class="py-2 text-center">div 1</div>
+							</div>
+							<div class="col-3 mx-auto">
+								<img class="img-fluid" src="https://via.placeholder.com/350x300?text=2">
+								<div id="content" class="py-2 text-center">div 2</div>
+							</div>
+							<div class="col-3 mx-auto">
+								<img class="img-fluid" src="https://via.placeholder.com/350x300?text=3">
+								<div id="content" class="py-2 text-center">div 3</div>
+							</div>
+							<div class="col-3 mx-auto">
+								<img class="img-fluid" src="https://via.placeholder.com/350x300?text=4">
+								<div id="content" class="py-2 text-center">div 4</div>
+							</div>
+						</div>
+					</div>
+					<div class="carousel-item ">
+						<div class="row px-4 py-2">
+							<div class="col-3 mx-auto">
+								<img class="img-fluid" src="https://via.placeholder.com/350x300?text=5">
+								<div id="content" class="py-2 text-center">div 5</div>
+							</div>
+							<div class="col-3 mx-auto">
+								<img class="img-fluid" src="https://via.placeholder.com/350x300?text=6">
+								<div id="content" class="py-2 text-center">div 6</div>
+							</div>
+							<div class="col-3 mx-auto">
+								<img class="img-fluid" src="https://via.placeholder.com/350x300?text=7">
+								<div id="content" class="py-2 text-center">div 7</div>
+							</div>
+							<div class="col-3 mx-auto">
+								<img class="img-fluid" src="https://via.placeholder.com/350x300?text=8">
+								<div id="content" class="py-2 text-center">div 8</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<a href="#multi-slider" data-slide="prev" class="carousel-control-prev">
+					<span class="carousel-control-prev-icon"></span>
+				</a>
+				<a href="#multi-slider" data-slide="next" class="carousel-control-next">
+					<span class="carousel-control-next-icon"></span>
+				</a>
+			</div>
+			<!-- multy slide end -->
+		</div>
+		
 		
 		<!-- footer  -->
 		
-		<div id="footer" class="mt-3 bg-dark text-white rounded py-3 px-4" style="min-height: 200px;">
+		<div id="footer" class="mt-3 bg-dark text-white py-3 px-4" style="min-height: 200px;">
 			footer content go here
 		</div>
 
