--- a/index.html
+++ b/index.html
@@ -139,16 +139,90 @@
 		
 		
 		<!-- footer  -->
-		
-		<div id="footer" class="mt-3 bg-dark text-white py-3 px-4" style="min-height: 200px;">
-			footer content go here
+		<footer class="footer">
+			<div class="container">
+				<div class="row">
+
+					<div class="col-lg-3 footer_col">
+						<div class="footer_column footer_contact">
+							<div class="logo_container">
+								<div class="logo">
+									<a href="#"><img src="img/avatar-m.png" class="rounded-circle img-fluid" width="50"></a>
+								</div>
+							</div>
+							<div class="footer_title">We are here for help</div>
+							<div class="footer_phone">+919870691617</div>
+							<div class="footer_contact_text">
+								<p>IET LUCKNOW</p>
+							</div>
+							<div class="footer_social">
+								<ul>
+									<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+									<li><a href="#"><i class="fab fa-twitter"></i></a></li>
+									<li><a href="#"><i class="fab fa-youtube"></i></a></li>
+									<li><a href="#"><i class="fab fa-google"></i></a></li>
+									<li><a href="#"><i class="fab fa-vimeo-v"></i></a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-lg-2 offset-lg-2">
+						<div class="footer_column">
+							<div class="footer_title">Find it by Category</div>
+							<ul class="footer_list">
+								<li><a href="#">Academic Books</a></li>
+								<li><a href="#">Competitive Exam Book</a></li>
+								<li><a href="#">Action & Adventure</a></li>
+								<li><a href="#">Health & Family</a></li>
+								<li><a href="#">Humor</a></li>
+							</ul>
+						</div>
+					</div>
+
+					<div class="col-lg-2">
+						<div class="footer_column">
+							<div class="footer_title">Customer Care</div>
+							<ul class="footer_list">
+								<li><a href="#">My Account</a></li>
+								<li><a href="#">Order Tracking</a></li>
+								<li><a href="#">Wish List</a></li>
+								<li><a href="#">Customer Services</a></li>
+								<li><a href="#">Returns / Exchange</a></li>
+								<li><a href="#">FAQs</a></li>
+								<li><a href="#">Product Support</a></li>
+							</ul>
+						</div>
+					</div>
+
+				</div>
+			</div>
+		</footer>
+
+		<!-- Copyright -->
+
+		<div class="copyright">
+			<div class="container">
+				<div class="row">
+					<div class="col">
+					
+						<div class="copyright_container d-flex flex-sm-row flex-column align-items-center justify-content-start">
+							<div class="logos ml-sm-auto">
+								<ul class="logos_list">
+									<li><a href="#"><img src="img/logos_1.png" alt=""></a></li>
+									<li><a href="#"><img src="img/logos_2.png" alt=""></a></li>
+									<li><a href="#"><img src="img/logos_3.png" alt=""></a></li>
+									<li><a href="#"><img src="img/logos_4.png" alt=""></a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 
 	</div>
 
 	
-	
-	
-
 </body>
 </html>
